--- a/raytracerlib/raytracerlib.vcxproj
+++ b/raytracerlib/raytracerlib.vcxproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <ClCompile Include="camera.ixx" />
     <ClCompile Include="color.ixx" />
+    <ClCompile Include="helpers.ixx" />
     <ClCompile Include="hittable.ixx" />
     <ClCompile Include="hittable_list.ixx" />
     <ClCompile Include="ray.ixx" />
