--- a/raytracerlib/raytracerlib.vcxproj.filters
+++ b/raytracerlib/raytracerlib.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="camera.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="helpers.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
