--- a/raytracerlib/raytracerlib.vcxproj.filters
+++ b/raytracerlib/raytracerlib.vcxproj.filters
@@ -42,5 +42,8 @@
     <ClCompile Include="helpers.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="material.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
